fix : text align center

--- a/hlx_statics/blocks/title/title.css
+++ b/hlx_statics/blocks/title/title.css
@@ -12,7 +12,9 @@ main div.title-wrapper div.title.background-color-navy .title-heading, main  div
 
 main div.title-wrapper {
     width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 main div.title-wrapper>div {
